[package]
name = "aviate-board-sitl-gazebo"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generic Gazebo SITL board for Aviate"

[lib]
name = "aviate_board_sitl_gazebo"
path = "src/lib.rs"

[features]
default = []
gz-plugin = ["aviate-backend-gz/gz-plugin"]

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-config = { path = "../../aviate-config" }
aviate-runtime = { path = "../../aviate-runtime", features = ["env-sitl"] }
aviate-hal-io = { path = "../../aviate-hal/io" }
aviate-hal-xil = { path = "../../aviate-hal/xil" }
aviate-backend-gz = { path = "../../aviate-hal/xil/backends/gz", optional = true }
aviate-airframe-multirotor = { path = "../../aviate-airframes/multirotor" }

[lints]
workspace = true
