[package]
publish = false  # internal crate — not released to crates.io
name = "aviate-board-sitl-gazebo"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generic Gazebo SITL board for Aviate"

[lib]
name = "aviate_board_sitl_gazebo"
path = "src/lib.rs"

[features]
default = []
gz-plugin = ["aviate-backend-gz/gz-plugin"]

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-config = { path = "../../aviate-config" }
aviate-runtime = { path = "../../aviate-runtime", features = ["env-sitl"] }
aviate-hal-io = { path = "../../aviate-hal/io" }
aviate-hal-xil = { path = "../../aviate-hal/xil" }
aviate-backend-gz = { path = "../../aviate-hal/xil/backends/gz", optional = true }
log = "0.4"

[dev-dependencies]
# The telemetry-stream tests fly the real production kernel — the
# closest in-process stand-in for the sitl-gazebo-x500 binary.
aviate-app-sitl-gazebo-x500-kernel = { path = "../../aviate-apps/sitl-gazebo-x500/kernel" }
aviate-link = { path = "../../aviate-link", features = ["config"] }

[package.metadata.aviate-board]
chip = "xil"           # Special: simulator, no flashing
programmer = "none"    # Simulator board, no programming

[lints]
workspace = true
