[package]
name = "aviate-board-sitl-jmavsim"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "jMAVSim SITL board using MAVLink HIL protocol"

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-hal-io = { path = "../../aviate-hal/io" }
aviate-hal-xil = { path = "../../aviate-hal/xil" }
aviate-backend-mavlink-hil = { path = "../../aviate-hal/xil/backends/mavlink-hil" }
aviate-airframe-multirotor = { path = "../../aviate-airframes/multirotor" }
aviate-runtime = { path = "../../aviate-runtime", features = ["env-sitl"] }
log = "0.4"

[package.metadata.aviate-board]
chip = "xil"           # Special: simulator, no flashing
programmer = "none"    # Simulator board, no programming
