[package]
license = "MIT OR Apache-2.0"
publish = false  # internal crate — not released to crates.io
name = "test-app-rp2350"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-app-rp2350"
path = "src/main.rs"

[dependencies]
# Shared boot magic constants — the app writes the same scratch value the
# bootloader reads, so both must use one definition.
aviate-boot-core = { path = "../../aviate-boot-core" }
# Don't enable cortex-m's critical-section, rp235x-hal provides it
cortex-m = { version = "0.7", default-features = false }
cortex-m-rt = "0.7"
rp235x-hal = { version = "0.4", features = ["rt", "critical-section-impl"] }
panic-halt = "1.0"
embedded-hal = "1.0"
