[package]
name = "aviate-hal-xil"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Aviate X-In-Loop (SITL/HITL) HAL - backend agnostic"

[lib]
name = "aviate_hal_xil"
path = "src/lib.rs"

[features]
default = []
hitl = []
# Enable fault injection for SITL/HITL testing
xil-fault = ["aviate-hal-io/xil-fault"]

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-mavlink = { path = "../../aviate-mavlink" }
aviate-hal-io = { path = "../io" }
